tests/int/snapshots/r#mod__int__use_command__module_cli_flags_r_t_e_G.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - cli
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::CrawkArgs
crate::cli::CrawkCommands
crate::cli::CrawkOptions
crate::cli::UseArgs
crate::cli::validate_depth
crawk::version

----- stderr -----
